Bug fixes: hide scrollbar

--- a/GUI-nodejs/public/main.css
+++ b/GUI-nodejs/public/main.css
@@ -7,22 +7,21 @@
 html, body {
     height: 100%;
 }
-/* section, div {
-    border: 1px solid purple;
-} */
 .h-85 {
     height: 85%;
 }
 .h-15 {
     height: 15%;
 }
-/* #maincontainer {
-    overflow-y: hidden;
-} */
 #codecontainer {
     background-color: #ddf;
     padding: 3vh 3vw;
     overflow-y: scroll;
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;  /* Firefox */
+}
+#codecontainer::-webkit-scrollbar { 
+    display: none;  /* Safari and Chrome */
 }
 #blockscontainer {
     height: 100vh;
@@ -130,6 +129,11 @@ button.btngreen.disabled, button.btngreen.disabled:hover {
     overflow-x: hidden;
     display: flex;
     flex-direction: row;
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;  /* Firefox */
+}
+#allblocks::-webkit-scrollbar { 
+    display: none;  /* Safari and Chrome */
 }
 #allblocksleft {
     padding: 1vh 1vw 1vh 2vw;
